<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <me.ibrahimsn.particle.ParticleView
            android:id="@+id/particleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:particleColor="@android:color/holo_green_dark"
            app:particleCount="60"
            app:particleLineColor="@android:color/holo_green_dark"
            app:particleLinesEnabled="true"
            app:particleMaxRadius="10"
            app:particleMinRadius="3"
            app:particlesBackgroundColor="#000" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/id_leftSideMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/particleView">


            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_interest_badge"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <TextView
                android:id="@+id/id_interestText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/interest"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_language"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <TextView
                android:id="@+id/id_languageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_search_men"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <TextView
                android:id="@+id/id_aboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/about_me"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_contact"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="@+id/guideline6" />

            <TextView
                android:id="@+id/id_contactText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/contact_me"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline6" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_social_media"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="@+id/guideline7" />

            <TextView
                android:id="@+id/id_socialMediaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/social_media"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline7" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_copywriting"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />


            <TextView
                android:id="@+id/id_copyrightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="Copyrights \n&amp; Privacy"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="60dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="60dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="100dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="140dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="180dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="220dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/id_rightSideMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/id_educationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/education"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="@+id/guideline12" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_education_white"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline12" />

            <TextView
                android:id="@+id/id_tech_skillText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/technical_skill"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="@+id/guideline13" />

            <ImageView
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_mobile_code_white"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline13" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_project"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline16" />


            <TextView
                android:id="@+id/id_projectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/projects"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="@+id/guideline16" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_certificate"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline15" />

            <TextView
                android:id="@+id/id_certificateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/certificate"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="@+id/guideline15" />

            <ImageView
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_virtual_space"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline14" />

            <TextView
                android:id="@+id/id_virtual_spaceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/virtual_space"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="@+id/guideline14" />

            <ImageView
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_experience"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline17" />

            <TextView
                android:id="@+id/id_experienceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/experience"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="@+id/guideline17" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="60dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="60dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="100dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="140dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="180dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="220dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>