<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <me.ibrahimsn.particle.ParticleView
            android:id="@+id/particleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:particleColor="@android:color/holo_green_dark"
            app:particleCount="60"
            app:particleLineColor="@android:color/holo_green_dark"
            app:particleLinesEnabled="true"
            app:particleMaxRadius="10"
            app:particleMinRadius="3"
            app:particlesBackgroundColor="#000" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:translationZ="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/particleView">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_education_white"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="@+id/guideline20" />

            <TextView
                android:id="@+id/id_educationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/education"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="@+id/guideline20" />


            <!--===================================================================-->

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_project"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="@+id/guideline16" />

            <TextView
                android:id="@+id/id_projectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/projects"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="@+id/guideline16" />

            <ImageView
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_mobile_code_white"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="@+id/guideline13" />

            <TextView
                android:id="@+id/id_tech_skillText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/technical_skill"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="@+id/guideline13" />


            <!--===================================================================-->


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_certificate"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="@+id/guideline15" />

            <TextView
                android:id="@+id/id_certificateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/certificate"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="@+id/guideline15" />

            <ImageView
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_virtual_space"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="@+id/guideline14" />

            <TextView
                android:id="@+id/id_virtual_spaceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/virtual_space"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="@+id/guideline14" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="70dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="260dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="60dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="60dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="100dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="140dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="180dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="220dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <ImageView
                android:layout_width="@dimen/size_28_dp"
                android:layout_height="@dimen/size_28_dp"
                android:src="@drawable/ic_experience"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="@+id/guideline17" />

            <TextView
                android:id="@+id/id_experienceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poiret_one"
                android:text="@string/experience"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="@+id/guideline17" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>